logs/users_check.log
python :   File "<string>", line 33
所在位置 行:1 字符: 227
+ ... coding]::UTF8; $env:WSL_UTF8 = '1'; Set-Location C:\fund; python -c "
+                                                               ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 33:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'{" Month\:<10}
          ^
SyntaxError: unterminated string literal (detected at line 33)
